--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input id="post-title" type="text" />
             <label for="post-body">Body:</label>
             <textarea id="post-body"></textarea>
-            <button>Post</button>
+            <button id="post-btn">Post</button>
         </form>
         <div id="blog-list"></div>
         <script src="index.js"></script>
